--- a/views/settings.ejs
+++ b/views/settings.ejs
@@ -43,10 +43,43 @@
                 female  <input type='radio' value="male"/>
                 anyother    <input type='radio' value="male"/>
             </div>
-
+            
             
             <input type="submit" value="Update"/>
         </form>
+        
+
+        <div>
+            <label>Allow secret messages</label>
+            <button>
+                <i class="fas fa-toggle-on  lightblue"></i>
+            </button>
+        </div>
+        <div>
+            <label>Allow Date requests</label>
+            <button>
+                <i class="fas fa-toggle-on  lightblue"></i>
+            </button>
+        </div>
+        <div>
+            <label>Allow notifications</label>
+            <button>
+                <i class="fas fa-toggle-on  lightblue"></i>
+            </button>
+        </div>
+        <div>
+            <a href="#">change password</a>
+        </div>
+        <div>
+            <a href="/logout">Logout</a>
+        </div>
+        <div>
+            <a href="#">Blocked accounts</a>
+        </div>
+        <div>
+            <button><a style="color: red;">Delete my account</a></button>
+        </div>
+        
     </div>
 </body>
 </html>
