--- a/views/settings.ejs
+++ b/views/settings.ejs
@@ -11,75 +11,77 @@
 </head>
 <body>
     <%-include('header.ejs',{username:settingsobj.username})%>
-    <div class="settings_container">
-        <form>
-            <div>
-                <label>firstname</label>
-                <input type="text"/>
-            </div>            
-            <div>
-                <label>Lastname</label>
-                <input type="text"/>
-            </div>
-            <div>
-                <label>email</label>
-                <input type="text"/>
-            </div>
-                        
-            <div>
-                <label>location</label>
-                <input type="text"/>
-            </div>
-            <div>
-                <label>date of birth</label>
-                <input type="date"/>
-            </div>
-            <div>
-                <label>gender</label>
+    <div class="flex flex_center">
+        <div class="settings_container">
+            <form>
+                <div>
+                    <label>firstname</label>
+                    <input type="text"/>
+                </div>            
+                <div>
+                    <label>Lastname</label>
+                    <input type="text"/>
+                </div>
+                <div>
+                    <label>email</label>
+                    <input type="text"/>
+                </div>
+                            
+                <div>
+                    <label>location</label>
+                    <input type="text"/>
+                </div>
+                <div>
+                    <label>date of birth</label>
+                    <input type="date"/>
+                </div>
+                <div>
+                    <label>gender</label>
+                    
+                </div>
+                <div>
+                    male    <input type='radio' value="male"/>
+                    female  <input type='radio' value="male"/>
+                    anyother    <input type='radio' value="male"/>
+                </div>
                 
+                
+                <input type="submit" value="Update"/>
+            </form>
+            
+
+            <div>
+                <label>Allow secret messages</label>
+                <button>
+                    <i class="fas fa-toggle-on  lightblue"></i>
+                </button>
             </div>
             <div>
-                male    <input type='radio' value="male"/>
-                female  <input type='radio' value="male"/>
-                anyother    <input type='radio' value="male"/>
+                <label>Allow Date requests</label>
+                <button>
+                    <i class="fas fa-toggle-on  lightblue"></i>
+                </button>
+            </div>
+            <div>
+                <label>Allow notifications</label>
+                <button>
+                    <i class="fas fa-toggle-on  lightblue"></i>
+                </button>
+            </div>
+            <div>
+                <a href="#">change password</a>
+            </div>
+            <div>
+                <a href="/logout">Logout</a>
+            </div>
+            <div>
+                <a href="#">Blocked accounts</a>
+            </div>
+            <div>
+                <button><a style="color: red;">Delete my account</a></button>
             </div>
             
-            
-            <input type="submit" value="Update"/>
-        </form>
-        
-
-        <div>
-            <label>Allow secret messages</label>
-            <button>
-                <i class="fas fa-toggle-on  lightblue"></i>
-            </button>
         </div>
-        <div>
-            <label>Allow Date requests</label>
-            <button>
-                <i class="fas fa-toggle-on  lightblue"></i>
-            </button>
-        </div>
-        <div>
-            <label>Allow notifications</label>
-            <button>
-                <i class="fas fa-toggle-on  lightblue"></i>
-            </button>
-        </div>
-        <div>
-            <a href="#">change password</a>
-        </div>
-        <div>
-            <a href="/logout">Logout</a>
-        </div>
-        <div>
-            <a href="#">Blocked accounts</a>
-        </div>
-        <div>
-            <button><a style="color: red;">Delete my account</a></button>
-        </div>
-        
     </div>
 </body>
 </html>
