--- a/addmie/css/gaurav.css
+++ b/addmie/css/gaurav.css
@@ -23,7 +23,7 @@
 padding: 20px;
 font-size: 15px;
 }
-.form-inside input[type=text], input[type=submit] {
+.form-inside input,select {
   width: 100%;
   padding: 12px;
   margin: 6px 0;
@@ -47,8 +47,7 @@ font-size: 15px;
 .form-inside input[type=submit]:hover {
 	background-color: lightblue;
 	color: #00b9ed;
-	font-size: 15px;
-	box-shadow: 5px 2px 10px black;
+
 }
 ul {
     list-style-type: none;
