--- a/views/mypostcontainer.ejs
+++ b/views/mypostcontainer.ejs
@@ -11,7 +11,9 @@
         </ul>
     </div>
     <div class="post-image">
-        <img src="../addmie/img/Addmie.png" alt="image" height="400px" width="auto" style="margin: 5px;">
+ 
+            <img src="../addmie/img/Addmie.png" alt="image" height="400px" width="auto" style="margin: 5px;" ondblclick="like('<%=postobj._id%>')">
+
     </div>
    
     <span>
