--- a/views/Addmie.ejs
+++ b/views/Addmie.ejs
@@ -8,7 +8,7 @@
 </head>
 <body >
 	
-	<div class="entry-container row">
+	<div class="entry-container row flex ">
 		<div class="signup containerss col">
 			<h1 class="center">New Here,</h1>
 			<h3 class="center">Signup Here</h3>			
