--- a/addmie/css/styles.css
+++ b/addmie/css/styles.css
@@ -10,6 +10,7 @@
 body,html{
     height: 100%;
     width: 100%;
+    overflow-: hidden;
 }
 .button {
     position: relative;
@@ -89,48 +90,58 @@ nav{
     padding-left: 5px;
     padding-right: 5px;
 }
-.entry-container{
-    display: flex;
-}
+
 .grid-container{
-    display: flex;
-    width: 100%;
-    height: 100%;
+    flex-direction: column;
 }
-.grid-container-left { 
-    width: 20%;
+.grid-container-left {
     height: 100%;
-    
+    background-color: blanchedalmond;
 } 
-.grid-container-right{
-    width: 80%;
-    height: 100%;
-    background-color: seagreen;
-}
+
 .profile{
-    background-color: purple;
-    width: 100%;
+    flex-direction: column;
+    width: 30%;
     height: 35%;
-    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+#containerbar{
+    width: 100%;
     flex-direction: column;
     justify-content: center;
     align-items: center;
 }
 .container{
-    background-color: blue;
     width: 100%;
-    height: 65%;
+    justify-content: space-around;
+    align-items: flex-end;
+}
+.container h1{
+    font-size: 24px;
+    text-transform: uppercase;
+    font-weight: 500;
+}
+.container h2{
+    font-size: 16px;
+    font-weight: 400;
+}
+.grid-container-right{
+    width: 100%;
+    height: 100%;
+    overflow: scroll;
 }
 .postform{
-    background-color: tomato;
-    width: 100%;
-    height: 15%;
-    
+    border: 1px solid black;
+    padding: 1px;
+    width: 80%;
+    height: 15%;    
 }
 .post-container{
-    background-color: gold;
+    
     width: 100%;
     height: 85%;
+    
 }
 #profile_picture{
     background-color: whitesmoke;
