post page added

--- a/views/mypostcontainer.ejs
+++ b/views/mypostcontainer.ejs
@@ -5,6 +5,7 @@
     </div>
     <div class="menu hide" id="<%=menuid%>" >
         <ul >
+            <li><button onclick="viewpost('<%=postobj._id%>')"  >view</button></li>
             <li><button onclick="removepost('<%=postobj._id%>')"  >remove</button></li>
             <li><button onclick="copypostlink('<%=postobj._id%>')"  >copy link</button></li>
             <li><button onclick="editthispost('<%=postobj._id%>')"  >edit</button></li>
