--- a/views/header.ejs
+++ b/views/header.ejs
@@ -6,7 +6,8 @@
  %>
  <nav>
 	<script src="https://kit.fontawesome.com/e4aaa47c6d.js" crossorigin="anonymous"></script>
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+	<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+	<script src="../addmie/js/sendmessage.js"></script>
     <script src="../addmie/js/client.js"></script>
     <script src="../addmie/js/frontend.js"></script> 
 	
