--- a/addmie/css/post.css
+++ b/addmie/css/post.css
@@ -1,5 +1,60 @@
 .postbox{
     height: 80%;
-    width: 80%;
+    width: fit-content;
     border: 1px solid black;
+
+}
+.postbox_left .postbox_right{
+    width: 50%;
+    height: 100%;
+}
+.postbox_left{
+    border-right: 1px solid black;
+    margin-right: 5px;
+}
+
+#likes ,#comments{
+    height: 100%;
+    overflow: scroll;
+    width: 100%;
+}
+#comments {
+    flex-direction: column;
+    overflow-y: scroll;
+}
+#comments > div.flex.flex_center{
+    width: 100%;
+    border-top: 1px solid black;
+}
+#comments p{
+    height: fit-content;
+    width: 250px;
+    word-wrap: break-word;
+    text-overflow: clip;
+    color: rgb(65,65,65);
+    font-weight: 100;
+}
+#comments h3 a{
+    text-decoration: none;
+    font-size: 14px;
+    font-weight:300;
+    color: black;
+}
+#comments h3 button{
+    color: blue;
+}
+#newcomment{
+    padding-left: 10px;
+    padding-right: 10px;
+    border: 1px solid #00b9ed;
+    border-radius: 10px;
+    margin-bottom: 5px;
+}
+#newcomment button{
+    color: blue;
+}
+#newcomment textarea{
+    font-size: 12px;
+    color: black;
+    background-color: rgba(165, 165, 165, 0.2);
 }
