--- a/addmie/css/styles.css
+++ b/addmie/css/styles.css
@@ -72,6 +72,12 @@ nav{
     align-items: center;
     justify-content: center;
 }
+.flex_column{
+    flex-direction: column;
+}
+.flex_row{
+    flex-direction: row;
+}
 .title{
     font-size: 32px;
     font-weight: 600;
@@ -240,9 +246,9 @@ body > div.grid-container > div.grid-container-right > div.postform > form > inp
     background-color: rgba(69, 129, 241, 0.3);
     border: 1px solid rgba(69, 129, 241, 0.5);
     font-size: 10px;
-    font-weight: 700;
-    padding: 1px;
-    border-radius: 7%;
+    font-weight: 500;
+    padding: 2px;
+    border-radius: 10px;
 }
 .red{
     color: red;
